# riak-cxx-client

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  README.org  aclocal.m4  configure  configure.ac  makefile  riak_client.pc.in
m4/: boost_shared_ptr.m4  tr1_shared_ptr.m4  visibility.m4
riak_client/: client.h  common.h  config.h.in  riak_metadata.h  riak_object.h  string_list.h  string_map.h
riak_client/cxx/: basic.hpp  client.hpp  common.hpp  error.hpp  object.hpp  operations.hpp  riak_client.hpp  riak_client_fwd.hpp  util.hpp
riak_client/cxx/basic/: basic_client.hpp  bucket_properties.hpp  fetch_result.hpp  quorum.hpp  response.hpp  riak_result.hpp  server_info.hpp  store_params.hpp
riak_client/cxx/client/: bucket.hpp  client.hpp  cluster.hpp  mutation.hpp  resolver.hpp
riak_client/cxx/object/: index.hpp  link.hpp  object.hpp  riak_content.hpp  riak_metadata.hpp  riak_object.hpp  riak_version.hpp
riak_client/cxx/operations/: delete_object.hpp  fetch_object.hpp  store_object.hpp
riak_client/cxx/util/: noncopyable.hpp  shared_ptr.hpp  url.hpp
src/: client.cpp  internal.h  riakclient.proto  string_list.cpp  string_map.cpp
src/cxx/: asio.hpp  basic_client.cpp  connection.cpp  connection.hpp  cruft  pbc_client.cpp  pbc_client.hpp  pbc_fwd.hpp  pbc_header.cpp  pbc_header.hpp  pbc_message.cpp  pbc_message.hpp  pbc_operations.hpp  pbc_storage.hpp  riak_object.cpp  riakclient.pb.cc  riakclient.pb.h  threads.hpp  url.cpp
src/riakc/: SReadline.h  riakc.cpp  riakc_console.hpp
test/: test_basic.cpp  test_bucket.cpp  test_common.hpp  test_riak_object.cpp  test_server.cpp
